# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: second_project-check.yml
gendiff/: __init__.py  gendiff.py  generator_diff.py
gendiff/format_package/: json_format.py  plain.py  stylish.py
gendiff/formatters/: json_format.py  plain.py  stylish.py
gendiff/lib/: build_diff.py  build_diff1.py  cli.py  formatter.py  generate_diff.py  parser.py  stylish.py  tree.py
gendiff/scripts/: gendiff.py  gendiff_script.py  gendiff_start.py
tests/: __init__.py  test_gendiff.py
tests/fixtures/: result_true_json.json  result_true_json8.json
