[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksey Chudinov <alekseychudinov@gmail.com>"]
repository = "https://github.com/alekseychudinov/python-project-lvl2"
readme = "README.md"
classifiers = [
 "Programming Language :: Python :: 3.10"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
